<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/whiteBack"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:elevation="0dp"
        android:fontFamily="@font/nunito"
        android:text="@string/savecat"
        android:textColor="@color/basicBlack"
        android:textSize="13sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/boxColor"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="2dp"
        app:counterEnabled="true"
        app:counterMaxLength="140"
        app:counterTextColor="@color/hintColor54"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addCategoryEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/whiteBack"
            android:fontFamily="@font/nunito"
            android:paddingStart="0dp"
            android:paddingTop="0dp"

            android:paddingEnd="0dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/cancelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="11dp"
            android:fontFamily="@font/nunito"
            android:paddingBottom="16dp"
            android:text="@string/canc"
            android:textColor="@color/boxColor"
            app:layout_constraintEnd_toStartOf="@+id/saveTextView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/saveTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/nunito"
            android:paddingBottom="16dp"
            android:text="@string/cavecet"
            android:textColor="@color/boxColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>
